--- a/rooms/room4.html
+++ b/rooms/room4.html
@@ -33,9 +33,9 @@ cat
 
     
     <meta name="description"
-      content="Room|提拉米蘇|提拉米蘇|二樓四人房|房價/說明介紹|房間價格：NT$|4200|包棟價格：NT$22000|加Line詢問詳情|設備/相關服務|房內設備：|二大床、分離式冷氣、液晶無線電視、吹風機、免費無線WiFi、浴巾、（洗臉、洗髮、沐浴乳）三合一。|為響應環保，本民宿不主動提供梳子、浴帽、刮鬍刀等拋棄品。|相關服務|進房時間為|16:00|後，退房時間為上午|10:00|前。|續住將不主動更換床被單、枕套。|提供協助安排汽、機車及旅遊行程規劃諮詢服務。|房間格局 ">
-    <title>提拉米蘇 二樓四人房</title>
-    <meta property="og:title" content="-提拉米蘇 二樓四人房">
+      content="Room|201|　201|海景雙人房|房價/說明介紹|房間價格：NT$|包棟價格：NT$22000|加Line詢問詳情|設備/相關服務|房內設備：|一大床、分離式冷氣、液晶無線電視、吹風機、免費無線WiFi、浴巾、（洗臉、洗髮、沐浴乳）三合一。|為響應環保，本民宿不主動提供梳子、浴帽、刮鬍刀等拋棄品。|相關服務|進房時間為|16:00|後，退房時間為上午|10:00|前。|續住將不主動更換床被單、枕套。|提供協助安排汽、機車及旅遊行程規劃諮詢服務。|房間格局 ">
+    <title>　201 海景雙人房</title>
+    <meta property="og:title" content="-　201 海景雙人房">
     <meta property="og:description"
       content="奇遇菓民宿致力於為每位旅客打造最完美的澎湖之旅。我們不僅提供專業的旅遊規劃服務，更設有便捷的租車服務，讓您能以最舒適的方式探索澎湖的每個角落。">
   
@@ -543,7 +543,7 @@ cat
         <!-- 图片容器 -->
         <div class="image-container ">
             <div class="text-overlay">
-        Room 提拉米蘇
+        Room 201
             </div>
         </div>
       </div>
@@ -557,7 +557,7 @@ cat
 <div class="container-fluid">
     <div class="row ">
         <div class="col-12 pt-5 pb-md-5">
-            <div class="fs-1 text-center">提拉米蘇 二樓四人房</div>
+            <div class="fs-1 text-center">　201 海景雙人房</div>
             <hr class="mx-auto" style="width: 7%;">
         </div>
 
@@ -581,7 +581,7 @@ cat
                 </header>
                 <div class="card-body mx-auto ">
                     <p class="fs-4">
-                        房間價格：NT$ 4200<br>
+                        房間價格：NT$ <br>
                         包棟價格：NT$22000<br>
                     </p>
 
@@ -612,7 +612,7 @@ cat
                 <div class="card-body mx-auto ">
                     <h3>房內設備：</h3>
                     <ul>
-                        <li>二大床、分離式冷氣、液晶無線電視、吹風機、免費無線WiFi、浴巾、（洗臉、洗髮、沐浴乳）三合一。</li>
+                        <li>一大床、分離式冷氣、液晶無線電視、吹風機、免費無線WiFi、浴巾、（洗臉、洗髮、沐浴乳）三合一。</li>
                         <li>為響應環保，本民宿不主動提供梳子、浴帽、刮鬍刀等拋棄品。</li>
                     </ul>
                     <h3>相關服務</h3>
