--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ cat
 
     
     <meta name="description"
-      content="Welcome|to|kiwigovilla|B&amp;B.|Welcome|to|kiwigovilla|B&amp;B.|Welcome|to|kiwigovilla|B&amp;B.|Welcome|to|kiwigovilla|B&amp;B.|Welcome|to|kiwigovilla|B&amp;B.|Welcome|to|kiwigovilla|B&amp;B.|幸福落腳菊島，就在奇遇菓海景民宿|奇遇菓民宿融合了澎湖的人文底蘊與無邊海景，讓旅人不僅能放鬆身心，更能感受到滿滿的幸福與溫暖。每一個細節都充滿用心，期待為您打造舒適、安心的住宿體驗。|在這裡，您能靜靜欣賞海天一色的美景，感受微風輕拂的悠閒時光。無論是與摯愛分享浪漫，或與朋友享受歡聚，奇遇菓民宿都是您探索菊島的最佳落腳處。|是不是該過過幾天慵懶的日子？|來！奇遇菓海景民宿和你一起！|🌊💙|🌊|澎湖超值行程推薦：|不論是熱鬧繽紛的花火節、夢幻碧藍的海水，還是精彩豐富的海上活動，「奇遇菓海景民宿」都為您安排好最完美的假期！我們提供精選機加酒套裝、超值船票行程，輕鬆暢遊吉貝、七美、東海等熱門離島。|從浮潛、划獨木舟、夜間小管體驗，到刺激的海底漫步，每一刻都讓您盡情擁抱澎湖迷人的海洋風情。多樣化的超值行程任您挑選，帶您創造專屬於自己的難忘海島回憶！|101|海景雙人房|房間價格：NT$|6200|包棟價格：NT$22000|房間詳情|102|雙人房|房間價格：NT$|包棟價格：NT$22000|房間詳情|103|雙人房|房間價格：NT$|6200|包棟價格：NT$22000|房間詳情|201|海景雙人房|房間價格：NT$|包棟價格：NT$22000|房間詳情|202|四人房|房間價格：NT$|6200|包棟價格：NT$22000|房間詳情|環境設施 ">
+      content="Welcome|to|kiwigovilla|B&amp;B.|Welcome|to|kiwigovilla|B&amp;B.|Welcome|to|kiwigovilla|B&amp;B.|Welcome|to|kiwigovilla|B&amp;B.|Welcome|to|kiwigovilla|B&amp;B.|Welcome|to|kiwigovilla|B&amp;B.|在最美人行道旁，與海相伴的奇遇菓海景民宿|坐落於澎湖湖西鄉的奇遇菓海景民宿，正位於被譽為「最美人行道」的海岸旁。推開窗，就能望見碧藍海面與天際交織的絕美畫面，讓您徹底沉浸在海風輕拂的悠閒時光中。|民宿以自然原木與海島元素打造溫暖的度假氛圍，每個房間都能感受到陽光灑落與海潮聲的陪伴。無論清晨漫步海岸、午後倚窗放空，或夜晚聽著浪聲入眠，這裡都是遠離塵囂的療癒角落。|想要與海共度幾天慢生活嗎？|來「奇遇菓海景民宿」，讓藍色成為你的日常。🌊💙|101|海景雙人房|房間價格：NT$|6200|包棟價格：NT$22000|房間詳情|102|雙人房|房間價格：NT$|包棟價格：NT$22000|房間詳情|103|雙人房|房間價格：NT$|6200|包棟價格：NT$22000|房間詳情|201|海景雙人房|房間價格：NT$|包棟價格：NT$22000|房間詳情|202|四人房|房間價格：NT$|6200|包棟價格：NT$22000|房間詳情|環境設施 ">
     <title>奇遇菓海景民宿</title>
     <meta property="og:title" content="奇遇菓海景民宿 澎湖旅遊 | 包棟 | 船票 | 機票 | 汽車 | 機車 | 各種旅遊行程規劃">
     <meta property="og:description"
@@ -671,35 +671,25 @@ cat
         <div class="col-md-9 mx-auto">
             <article class="card mb-5 mt-5 border-0">
                 <header class="card-header">
-                    <div class="fs-1">幸福落腳菊島，就在奇遇菓海景民宿</div>
+                    <div class="fs-1">在最美人行道旁，與海相伴的奇遇菓海景民宿</div>
                 </header>
 
                 <div class="card-body">
                     <!-- 民宿介紹 -->
                     <p>
-                        奇遇菓民宿融合了澎湖的人文底蘊與無邊海景，讓旅人不僅能放鬆身心，更能感受到滿滿的幸福與溫暖。每一個細節都充滿用心，期待為您打造舒適、安心的住宿體驗。
+                        坐落於澎湖湖西鄉的奇遇菓海景民宿，正位於被譽為「最美人行道」的海岸旁。推開窗，就能望見碧藍海面與天際交織的絕美畫面，讓您徹底沉浸在海風輕拂的悠閒時光中。
                     </p>
 
                     <p>
-                        在這裡，您能靜靜欣賞海天一色的美景，感受微風輕拂的悠閒時光。無論是與摯愛分享浪漫，或與朋友享受歡聚，奇遇菓民宿都是您探索菊島的最佳落腳處。
+                        民宿以自然原木與海島元素打造溫暖的度假氛圍，每個房間都能感受到陽光灑落與海潮聲的陪伴。無論清晨漫步海岸、午後倚窗放空，或夜晚聽著浪聲入眠，這裡都是遠離塵囂的療癒角落。
                     </p>
 
                     <p>
-                        是不是該過過幾天慵懶的日子？<br />
-                        來！奇遇菓海景民宿和你一起！ 🌊💙
+                        想要與海共度幾天慢生活嗎？<br />
+                        來「奇遇菓海景民宿」，讓藍色成為你的日常。🌊💙
                     </p>
 
-
-                    <!-- 行程推薦 -->
-                    <section>
-                        <h5>🌊 澎湖超值行程推薦：</h5>
-                        <p>
-                            不論是熱鬧繽紛的花火節、夢幻碧藍的海水，還是精彩豐富的海上活動，「奇遇菓海景民宿」都為您安排好最完美的假期！我們提供精選機加酒套裝、超值船票行程，輕鬆暢遊吉貝、七美、東海等熱門離島。
-                        </p>
-                        <p>
-                            從浮潛、划獨木舟、夜間小管體驗，到刺激的海底漫步，每一刻都讓您盡情擁抱澎湖迷人的海洋風情。多樣化的超值行程任您挑選，帶您創造專屬於自己的難忘海島回憶！
-                        </p>
-                    </section>
+                    
                 </div>
             </article>
         </div>
